src/snapshots/pui__tests__selection_follows_task_id_after_sort.snap
---
source: src/tests.rs
expression: ui
---
                                                                                
 ┌ Pui - Pueue TUI ───────────────────────────────────────────────────────────┐ 
 │Space: Select | Enter: Logs | f: Filter | s: Sort | c: Custom | r: Run | p: │ 
 └────────────────────────────────────────────────────────────────────────────┘ 
 ┌ Tasks ─────────────────────────────────────────────────────────────────────┐ 
 │     Id   Status       Command         Path                       Duration  │ 
 │>>   1    Queued       aaa             /tmp                       -         │ 
 │     0    Queued       zzz             /tmp                       -         │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 └────────────────────────────────────────────────────────────────────────────┘ 
 ┌────────────────────────────────────────────────────────────────────────────┐ 
 │Connected to Pueue daemon                                                   │ 
 └────────────────────────────────────────────────────────────────────────────┘
