src/snapshots/pui__tests__ui_snapshot.snap
---
source: src/tests.rs
expression: ui
---
                                                                                
 ┌ Pui - Pueue TUI ───────────────────────────────────────────────────────────┐ 
 │Space: Select | Enter: Logs | f: Filter | s: Sort | r: Run | p: Pause | x: K│ 
 └────────────────────────────────────────────────────────────────────────────┘ 
 ┌ Tasks ─────────────────────────────────────────────────────────────────────┐ 
 │     Id   Path                  Command              Duration   Status      │ 
 │>>   0    /tmp                  sleep 60             0s         Running     │ 
 │     1    /h/user               echo 'hello'         0s         Success     │ 
 │     2    /tmp                  false                0s         Failed (1)  │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 └────────────────────────────────────────────────────────────────────────────┘ 
 ┌────────────────────────────────────────────────────────────────────────────┐ 
 │Connected to Pueue daemon                                                   │ 
 └────────────────────────────────────────────────────────────────────────────┘
