src/snapshots/pui__tests__ui_snapshot_help_mode.snap
---
source: src/tests.rs
expression: ui
---
                                                                                
 ┌ Pui - Pueue TUI ───────────────────────────────────────────────────────────┐ 
 │r: Run | p┌ Key Bindings (? or Esc to close) ────────────────────┐ace: Selec│ 
 └──────────│Navigation                                           ↑│──────────┘ 
 ┌ Tasks ───│  j/↓       Move down                                █│──────────┐ 
 │     Id   │  k/↑       Move up                                  █│atus      │ 
 │>>   0    │  PgUp/PgDn Page up/down                             █│nning     │ 
 │     1    │  Home/End  First/last task                          █│ccess     │ 
 │     2    │                                                     █│iled (1)  │ 
 │          │Actions                                              █│          │ 
 │          │  r         Run/restart task(s)                      ║│          │ 
 │          │  p         Pause task(s)                            ║│          │ 
 │          │  x         Kill task(s)                             ║│          │ 
 │          │  Enter     View task logs                           ║│          │ 
 │          │  Backspace Remove task(s)                           ║│          │ 
 │          │  Space     Toggle selection                         ║│          │ 
 │          │  ?         Show this help                           ║│          │ 
 │          │                                                     ║│          │ 
 │          │Other                                                ║│          │ 
 └──────────│  Ctrl+a    Select all tasks                         ║│──────────┘ 
 ┌──────────│  d         Show task details                        ↓│──────────┐ 
 │Connected └──────────────────────────────────────────────────────┘          │ 
 └────────────────────────────────────────────────────────────────────────────┘
