src/snapshots/pui__tests__ui_snapshot_help_mode_scrolled_bottom.snap
---
source: src/tests.rs
expression: ui
---
                                                                                
 ┌ Pui - Pueue TUI ───────────────────────────────────────────────────────────┐ 
 │r: Run | p┌ Key Bindings (? or Esc to close) ────────────────────┐ace: Selec│ 
 └──────────│  Enter     View task logs                           ↑│──────────┘ 
 ┌ Tasks ───│  Backspace Remove task(s)                           ║│──────────┐ 
 │     Id   │  Space     Toggle selection                         ║│atus      │ 
 │>>   0    │  ?         Show this help                           ║│nning     │ 
 │     1    │                                                     ║│ccess     │ 
 │     2    │Other                                                ║│iled (1)  │ 
 │          │  d         Show task details                        ║│          │ 
 │          │  f         Filter tasks                             ║│          │ 
 │          │  s         Sort tasks                               ║│          │ 
 │          │  c         Edit config file                         ║│          │ 
 │          │  q         Quit                                     ║│          │ 
 │          │  Esc       Clear selection/filter                   █│          │ 
 │          │                                                     █│          │ 
 │          │Custom Commands                                      █│          │ 
 │          │  alt+e      editor                                  █│          │ 
 │          │  ctrl+g     lazygit                                 █│          │ 
 └──────────│                                                     █│──────────┘ 
 ┌──────────│Config: /home/user/.config/pui/config.toml           ↓│──────────┐ 
 │Connected └──────────────────────────────────────────────────────┘          │ 
 └────────────────────────────────────────────────────────────────────────────┘
