src/snapshots/pui__tests__ui_snapshot_log_view_end_key.snap
---
source: src/tests.rs
expression: buffer_string
---
┌ Task Log (Esc to close) ───────────────┐
│align/columns                           │
│ZZ                                      │
└────────────────────────────────────────┘
