src/snapshots/pui__tests__ui_snapshot_log_view_end_key_then_down.snap
---
source: src/tests.rs
expression: ui
---
┌ Task Log (Esc to close) ───────────────┐
│AA                                      │
│ZZ                                      │
└────────────────────────────────────────┘
