src/snapshots/pui__tests__ui_snapshot_multiselect.snap
---
source: src/tests.rs
expression: ui
---
                                                                                
 ┌ Pui - Pueue TUI ───────────────────────────────────────────────────────────┐ 
 │Space: Select | Enter: Logs | f: Filter | s: Sort | r: Run | p: Pause | x: K│ 
 └────────────────────────────────────────────────────────────────────────────┘ 
 ┌ Tasks ─────────────────────────────────────────────────────────────────────┐ 
 │     Id   Path suffix     Command         End        Duration   Status      │ 
 │>> * 0    tmp/            task_0          -          -          Queued      │ 
 │     1    tmp/            task_1          -          -          Queued      │ 
 │   * 2    tmp/            task_2          -          -          Queued      │ 
 │     3    tmp/            task_3          -          -          Queued      │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 └────────────────────────────────────────────────────────────────────────────┘ 
 ┌────────────────────────────────────────────────────────────────────────────┐ 
 │2 selected (Esc to clear)                                                   │ 
 └────────────────────────────────────────────────────────────────────────────┘
