src/snapshots/pui__tests__ui_snapshot_remove_task.snap
---
source: src/tests.rs
expression: ui
---
                                                                                
 ┌ Pui - Pueue TUI ───────────────────────────────────────────────────────────┐ 
 │Space: Select | Enter: Logs | f: Filter | s: Sort | r: Run | p: Pause | x: K│ 
 └────────────────────────────────────────────────────────────────────────────┘ 
 ┌ Tasks ─────────────────────────────────────────────────────────────────────┐ 
 │     Id   Path suffix     Command         End        Duration   Status      │ 
 │>>   0    tmp/            sleep 60        -          0s         Running     │ 
 │     2    tmp/            false           00:00      0s         Failed (1)  │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 │                                                                            │ 
 └────────────────────────────────────────────────────────────────────────────┘ 
 ┌────────────────────────────────────────────────────────────────────────────┐ 
 │Connected to Pueue daemon                                                   │ 
 └────────────────────────────────────────────────────────────────────────────┘
